Stop removing margins on mobile header

--- a/public/style.css
+++ b/public/style.css
@@ -30,10 +30,12 @@
 }
 
 /* only apply this style when the template 5 template is being used */
-html:has(link[href*=template5]) header.article-header.cf {
+html:has(link[href*=template5]) body:not(.mobile) header.article-header.cf {
   padding: 0;
-  border: 0;
   margin: 0;
+}
+html:has(link[href*=template5]) header.article-header.cf {
+  border: 0;
 }
 html:has(link[href*=template5]) .article_index .row {
   display: flex;
@@ -342,11 +344,12 @@ img {
 }
 :where(#chabad_body_page) .master-content-wrapper {
   background-image: linear-gradient(0deg, rgb(117, 197, 221) 0%, rgb(18, 176, 209) 100%);
-  height: 300px;
+  min-height: 300px;
   z-index: 0;
 }
 .mobile :where(#chabad_body_page) .master-content-wrapper {
   grid-row: 2;
+  padding-block: 35px;
 }
 :where(#chabad_body_page) .master-content-wrapper .article-header__title {
   color: #343f52 !important;
